--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/nav.css" />
+    <style>
+        /*
+        #play span{
+            background-color:yellow;
+        }
+*/
+
+    </style>
  </head>
  <body>
      <header>
-     <h1>Title Goes Here</h1>
+     <h1>DOM Play</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
             <a href="#" target="_blank">Name of project goes here</a>
@@ -19,15 +27,24 @@
      </header>
      
    <main class="wrapper">
-    <p>Content goes here</p>
+
+        <h2 class="subheader">Title Goes Here</h2>
+        <div id="play">
+            <p><span data-actor="hamlet">Hamlet: To be or not to be?</span></p>
+            <p><span data-actor="skull">Skull: Are you talking to me?</span></p>
+            <p><span data-actor="hamlet">Hamlet: What did you say?</span></p>
+            <p><span data-actor="skull">Skull: I didn't say anything. I'm only a skull.</span></p>
+            <p><span data-actor="hamlet">Hamlet: Oh good. I thought I was going crazy.</span></p>
+        </div>
      <footer>
-      <p><small>&copy; 2021 by 
-          YOUR NAME HERE, All Rights Reserved ~ 
+      <p><small>&copy; 2022 by 
+          Troy Washington, All Rights Reserved ~ 
           <a id="html-checker" href="#">Check HTML</a> ~ 
           <a id="css-checker" href="#">Check CSS</a></small>
      </p>
     </footer>
   </main>
   <script src="js/main.js"></script>
+  <script src="js/dom-play.js"></script>
  </body>
 </html>
