--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
      
    <main class="wrapper">
 
+        
+        <h3>This website demonstrates how events are wired onto elements and also demonstrates the concept of event propagation.</h3>
+        <h3><b>Instructions: </b></h3>
+        <h3>1. Click the name of the character role that you wish to highlight. </h3>
+        <h3>2. Click name of another character to highlight a new play role.</h3>
+        <hr>
+        <br>
+        <br>
+
         <h2 class="subheader">Scene 1. Elsinore. A platform before the castle.</h2>
         <div id="play">
             <p><span data-actor="Bernardo">Bernardo: Who's there?</span></p>
